Fix horizontal scrollbar

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -1,4 +1,9 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+body {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 .bg-primary {
     background-color: #74BC1F !important;
 }
